<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/triple_lemon_cake">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="240dp"
        android:layout_height="130dp"
        android:layout_marginLeft="60dp"
        app:srcCompat="@drawable/pp" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType=""
        android:paddingTop="@dimen/padding_top"
        android:textSize="@dimen/txtSize" />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType=""
        android:textSize="@dimen/txtSize"
        android:layout_marginTop="@dimen/margin_top"
        android:paddingTop="@dimen/padding_top"
        />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType=""
        android:textSize="@dimen/txtSize"
        android:layout_marginTop="@dimen/margin_top"
        android:paddingTop="@dimen/padding_top"
        />
    <!--email-->

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/address"
        android:textSize="@dimen/txtSize"
        android:inputType=""
        android:layout_marginTop="@dimen/margin_top"
        android:paddingTop="@dimen/padding_top"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/linear_margin_top"
        >

        <EditText
            android:id="@+id/editText3"
            android:layout_width="@dimen/code_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/txtSize"
            android:inputType="none"
            android:text="@string/_94"
            android:autofillHints=""
            />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:textSize="@dimen/txtSize"
            android:paddingTop="@dimen/padding_top"
            android:hint="@string/phone_number"
            android:inputType="" />
    </LinearLayout>


    <Button
        android:onClick="back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn"
        android:layout_marginTop="@dimen/margin_top_button"
        android:text="@string/BACK"
        android:textAlignment="center"
        android:textSize="@dimen/textSize_btn"/>



</LinearLayout>