<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"

    tools:context=".NonVegActivity"
    android:background="@drawable/non_veg"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Non Veg Items"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="395dp"
        android:layout_height="306dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="12dp"
        android:padding="15dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:padding="10dp"
                    android:text="@string/cburger"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/coffee_incid"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:background="#1ABB38"
                        android:text="+"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/chickburger_order"
                        android:layout_width="34dp"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:paddingBottom="10dp"
                        android:text="__"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/coffee_decid"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:background="#B92D20"
                        android:text="-"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:padding="10dp"
                    android:text="@string/chknpzza"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/coldcoffee_incid"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:background="#1ABB38"
                        android:text="+"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/chicken_BBQ_pizza_order"
                        android:layout_width="34dp"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:paddingBottom="10dp"
                        android:text="__"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/coldcoffee_decid"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:background="#B92D20"
                        android:text="-"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:padding="10dp"
                    android:text="@string/cfriedrice"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/panpizza_incid"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:background="#1ABB38"
                        android:text="+"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView

                        android:id="@+id/chicken_fried_rice_order"
                        android:layout_width="34dp"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:paddingBottom="10dp"
                        android:text="__"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/panpizza_decid"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:background="#B92D20"
                        android:text="-"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:padding="10dp"
                    android:text="@string/cbriyani"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/vegburger_incid"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:background="#1ABB38"
                        android:text="+"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView

                        android:id="@+id/chicken_biriyani_order"
                        android:layout_width="34dp"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:paddingBottom="10dp"
                        android:text="__"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/vegburger_decid"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:background="#B92D20"
                        android:text="-"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:padding="10dp"
                    android:text="@string/mbiriyani"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/paneerroll_incid"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:background="#1ABB38"
                        android:text="+"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mutton_biryani_order"
                        android:layout_width="34dp"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:paddingBottom="10dp"
                        android:text="__"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/paneerroll_decid"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:background="#B92D20"
                        android:text="-"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/n_veg_tot_id"
        android:text=""
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_below="@+id/scrollView"
        android:layout_alignEnd="@+id/scrollView"
        android:layout_marginEnd="37dp"
        android:layout_alignRight="@+id/scrollView"
        android:layout_marginRight="37dp" />

    <Button
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="Main Menu"
        android:background="@drawable/btn_rnd_finalize"
        android:onClick="main_menu"
        android:id="@+id/button2"

        android:layout_below="@+id/button8"
        android:layout_alignStart="@+id/textView"
        android:layout_alignLeft="@+id/textView" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/n_veg_tot_id"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:background="@drawable/btn_rnd_finalize"
        android:onClick="proceed"
        android:padding="10dp"
        android:text="Proceed"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="27dp" />



</RelativeLayout>